--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "types/index.d.ts"
   ],
   "scripts": {
-    "build": "babel src -d dist --ignore *.test.js",
+    "build": "./node_modules/.bin/babel src -d dist --ignore *.test.js",
     "lint": "eslint src",
     "lint:fix": "yarn lint -- --fix",
     "prepublishOnly": "yarn build",
